Small mistakes fixed
Registrations section was overlapping the previous section. t is fixed now!

--- a/index.css
+++ b/index.css
@@ -265,10 +265,10 @@ line-height: 68px;
 /* Styling of last section */
 .last{
   width: 100%;
-  height: 40vh;
   display: flex;
   justify-content: center;
   align-items: center;
+  height: auto;
 }
 
 /* Styling of first div of last section */
