--- a/responsiveness-registrations.css
+++ b/responsiveness-registrations.css
@@ -1,3 +1,9 @@
+@media only screen and (max-width: 1400px)
+{
+  .last{
+    height: auto;
+  }
+}
 
 @media only screen and (max-width: 1110px)
 {
