--- a/topics.css
+++ b/topics.css
@@ -2,6 +2,10 @@
 for APIC-BEST */
 
 /* Top section Styling */
+.topics-guidelines{
+  height: auto;
+}
+
 .topics-one{
   width: 100%;
   display: flex;
